[gd_scene load_steps=3 format=3 uid="uid://cp2lmqni7f4je"]

[ext_resource type="Script" uid="uid://bk4lad5hcyj0f" path="res://scripts/gameplay/Item.gd" id="1_tl7dn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tl7dn"]

[node name="Item" type="RigidBody3D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_tl7dn")

[node name="InteractHint" type="Label3D" parent="."]
unique_name_in_owner = true
visible = false
billboard = 1
text = "E"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("BoxShape3D_tl7dn")

[node name="VisibilityCooldown" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="VisibilityCooldown" to="." method="_on_visibility_cooldown_timeout"]
